styles/main.css
body {
    font-family: 'Roboto', sans-serif;
    font-weight: normal;
    font-size: 16px;
    line-height: 1.2;
}

h1 {
    font-family: 'Playfair', serif;
    font-weight: 500;
    font-size: 5.4rem;
}

/* h3 {
    text-transform: uppercase;
} */

p {
    font-family: 'Bitter-Regular';
    font-size: 2rem;
}

/* .section-five ul {
    font-size: 2.4rem;
} */

/* Navigation --start */
nav {
    width: 100%;
    padding: 60px 0;
    text-align: center;
}

.nav__menu-btn {
    cursor: pointer;
    border: none;
    background: none;
}
/* Navigation --end */

/* Hero Section --start */
.hero {
    margin: 0 auto;
    width: 100%;
    min-width: 320px;
    margin-bottom: 135px;
}

.hero__wrapper {
    position: relative;
    width: 73.96%;
    max-width: 1065px;
    min-height: 630px;
    margin: 0 auto;
}

.hero__img {
    background-image: url('/assets/img/inside-weather-Uxqlfigh6oE-unsplash 1.jpg');
    background-position: start;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero__title {
    position: absolute;
    background-color: #fff;
    padding: 10.72% 0; /**  */
    width: 56%;
    text-align: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
}

.hero__img {
    width: 100%;
    min-height: 630px;
}

.hero__title-main {
    margin-bottom: 14px;
}

.hero__title-sub {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    font-weight: 500;
}
/* Hero Section --end */

/* Biography Section --start */
.biography {
    width: 100%;
    min-width: 320px;
    margin-bottom: 169px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.biography__wrapper {
    width: 81.6%;
    max-width: 1175px;
    display: flex;
    align-items: flex-start;
}

.biography__img {
    width: 47.06%;
    min-height: 400px;
}

.biography__title {
    position: relative;
    top: 33.8px;
    margin-right: 44px;
    font-weight: 700;
    font-size: 1.25rem;
    transform: rotate(-90deg);
    align-self: flex-start;
}

.biography__text {
    align-self: center;
    flex-basis: 40.44%;
}

.biography__text-title {
    font-family: 'Playfair', serif;
    font-size: 5.38rem;
    font-weight: 500;
    margin-bottom: 25px;
}

.biography__text-list {
    margin-bottom: 45px;
}

.biography__text-list_item {
    font-size: 1.13rem;
    font-weight: 500;
    display: inline-block;
}

.biography__text-list_item:not(.biography__text-list_item:first-child, .biography__text-list_item:last-child):after {
    content: '\00A0\00A0\002F';
}

.biography__text-paragraph {
    color: #0d0d0d;
}

.biography__text-paragraph:before {
    content: '\2013';
    display: block;
    color: #0d0d0d;
}
/* Biography Section --end */

/* Designers Section --start */
.designers {
    margin-bottom: 258px;
    padding-left: 30px;
}

.designers__wrapper {
    max-width: 1440px;
    width: 94.84%;
    min-width: 1337px;
    overflow: auto;
    margin: 0 auto;
    display: grid;
    gap: 30px;
    grid-template-columns: repeat(4, calc((100% - 90px) / 4));
    grid-auto-columns: calc((100% - 90px) / 4);
}

.designers__title {
    transform: rotate(-90deg) translate(-112px, -6px);
    display: inline-block;
    grid-row: 1;
    grid-column: 3/5;
    align-self: end;
    justify-self: center;
}

.designers__card {
    grid-row: 2;
    display: flex;
    flex-direction: column;
    align-self: flex-end;
}

.designers__card-main {
    grid-column: span 2;
}

.designers__card-main .designers__card-description {
    transform: translateX(50%);
}

.designers__card-photo {
    width: 100%;
    margin-bottom: 24px;
}

.designers__card-title {
    font-size: 1rem;
    text-transform: uppercase;
}
/* Designers Section --start */

/* Testimonials Section --start */
.testimonials {
    width: 81.8%;
    max-width: 1440px;
    margin: 0 auto 134px;
    display: grid;
    gap: 30px;
    grid-template-columns: 34px repeat(2, auto);
    grid-template-rows: repeat(4, auto);
}

.testimonials__title {
    font-size: 1.24rem;
    grid-row: 1;
    grid-column: 1/4;
}

.testimonials__img {
    grid-column: 2;
    grid-row: 2/5;
    width: 100%;
}

.testimonials__link {
    width: fit-content;
    transform: rotate(-90deg);
    grid-column: 1;
    align-self: center;
    justify-self: center;
}

.testimonials__paragraph {
    text-align: center;
    width: 221px;
    align-self: center;
    justify-self: center;
    grid-column: 3;
    grid-row: 2/5;
}

.testimonials__paragraph-text {
    margin-bottom: 42px;
}

.testimonials__link-a {
    display: block;
    text-decoration: none;
    color: inherit;
    cursor: pointer;
}
/* Testimonials Section --end */

